# Recipe_generator

./: .gitignore  README.md  eda.ipynb  main.py  pyproject.toml
